syntax = "proto3";

option csharp_namespace = "LibplanetConsole.Blockchain.Grpc";

package libplanet.console.blockchain.v1;

service BlockChainGrpcService {
  rpc SendTransaction(SendTransactionRequest) returns (SendTransactionResponse);
  rpc GetNextNonce(GetNextNonceRequest) returns (GetNextNonceResponse);
  rpc GetTipHash(GetTipHashRequest) returns (GetTipHashResponse);
  rpc GetState(GetStateRequest) returns (GetStateResponse);
  rpc GetBlockHash(GetBlockHashRequest) returns (GetBlockHashResponse);
  rpc GetAction(GetActionRequest) returns (GetActionResponse);

  rpc GetBlockAppendedStream(GetBlockAppendedStreamRequest) returns (stream GetBlockAppendedStreamResponse);
}

message BlockInformation {
  int64 height = 1;
  string hash = 2;
  string miner = 3;
}

message SendTransactionRequest {
  bytes transaction_data = 1;
}

message SendTransactionResponse {
  string tx_id = 1;
}

message GetNextNonceRequest {
  string address = 1;
}

message GetNextNonceResponse {
  int64 nonce = 1;
}

message GetTipHashRequest {
}

message GetTipHashResponse {
  string block_hash = 1;
}

message GetStateRequest {
  oneof hash {
    string block_hash = 1;
    string state_root_hash = 2;
  }
  string account_address = 3;
  string address = 4;
}

message GetStateResponse {
  bytes state_data = 1;
}

message GetBlockHashRequest {
  int64 height = 1;
}

message GetBlockHashResponse {
  string block_hash = 1;
}

message GetActionRequest {
  string tx_id = 1;
  int32 action_index = 2;
}

message GetActionResponse {
  bytes action_data = 1;
}

message GetBlockAppendedStreamRequest {
}

message GetBlockAppendedStreamResponse {
  BlockInformation block_info = 1;
}
